<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/home_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.HomeFragment">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="25dp"
        android:background="@drawable/backpict">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Welcome,"
            android:textSize="20dp"
            android:textColor="#FFFF"
            android:layout_gravity="top|start"/>

        <TextView
            android:id="@+id/tv_item_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name_placeholder"
            android:textSize="24dp"
            android:textColor="#FFFF"
            android:textStyle="bold"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="-40dp"
        android:layout_gravity="bottom"
        android:orientation="vertical"
        android:background="@drawable/rectangle"
        >

<LinearLayout
    android:layout_width="match_parent"
    android:padding="25dp"
    android:layout_height="match_parent" android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_home"
         android:textSize="25dp"
            android:textStyle="bold"
            android:fontFamily="@font/poppins"
            android:textColor="@color/black"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/desc_home"
            android:paddingTop="15dp"
            android:textSize="18dp"
            android:fontFamily="@font/poppins_semibold"
            /></LinearLayout>
    </LinearLayout>
</LinearLayout>
</FrameLayout>