<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/get_started"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary"
    tools:context=".GetStartedActivity">


    <Button
        android:id="@+id/btn_get_started"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="68dp"
        android:backgroundTint="@color/secondary"
        android:textColor="@color/primary"
        android:text="@string/get_started"
        android:textFontWeight="600"
        android:contentDescription="@null"
        android:layout_marginHorizontal="45dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingVertical="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.32">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:contentDescription="@null"
            android:src="@drawable/logo" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:contentDescription="@null"
            android:src="@drawable/il_welcome" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/welcome"
            android:textColor="@color/secondary"
            android:textFontWeight="600"
            android:textSize="36sp" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/join_with"
            android:textColor="@color/secondary"
            android:textSize="11sp" />
    </LinearLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:translationZ="-1dp"
            android:alpha="0.5"
        app:layout_constraintStart_toStartOf="parent">

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="110dp"
                android:layout_height="98dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:alpha="0.3"
                android:contentDescription="@null"
                android:rotation="50"
                android:src="@drawable/ic_fish1"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.12"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.022"
                app:tint="@color/secondary" />

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="104dp"
                android:layout_height="121dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentBottom="true"
                android:alpha="0.3"
                android:contentDescription="@null"
                android:rotation="-50"
                android:src="@drawable/ic_fish1"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.182"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="1.0"
                app:tint="@color/secondary" />

            <ImageView
                android:layout_width="161dp"
                android:layout_height="128dp"
                android:layout_alignParentStart="true"
                android:alpha="0.3"
                android:contentDescription="@null"
                android:src="@drawable/ic_fish2"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.247"
                app:tint="@color/secondary" />

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="122dp"
                android:layout_height="150dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:alpha="0.3"
                android:contentDescription="@null"
                android:rotation="100"
                android:src="@drawable/ic_fish2"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.585"
                app:tint="@color/secondary" />

            <ImageView
                android:layout_width="115dp"
                android:layout_height="145dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:alpha="0.3"
                android:contentDescription="@null"
                android:rotation="180"
                android:src="@drawable/ic_fish1"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.697"
                app:tint="@color/secondary" />

        </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
