<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/camera_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#AAD4FF"
    tools:context=".fragment.CameraFragment">

    

    <com.google.android.material.progressindicator.LinearProgressIndicator
        android:id="@+id/progressIndicator"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp"
        android:layout_marginTop="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"

            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="0dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginVertical="30dp"
                    android:background="@color/primary"
                    app:cardCornerRadius="20dp"
                    app:cardElevation="20dp">


                    <ImageView
                        android:id="@+id/previewImageView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:adjustViewBounds="true"
                        app:srcCompat="@drawable/ic_place_holder" />

                </androidx.cardview.widget.CardView>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center">

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/galleryButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="30dp"
                        android:backgroundTint="@color/primary"
                        android:text="@string/gallery"
                        app:icon="@drawable/ic_attach_file" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/cameraButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/primary"
                        android:text="@string/camera"
                        app:icon="@drawable/ic_camera" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:gravity="center"
                    android:paddingHorizontal="30dp">

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/uploadButton"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:backgroundTint="@color/primary"
                        android:text="@string/analyze"
                        app:cornerRadius="10dp" />


                </LinearLayout>

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:translationZ="-1dp"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="110dp"
            android:layout_height="98dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:alpha="0.3"
            android:contentDescription="@null"
            android:rotation="50"
            android:src="@drawable/ic_fish1"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.12"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.022"
            app:tint="@color/secondary" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="104dp"
            android:layout_height="121dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:alpha="0.3"
            android:contentDescription="@null"
            android:rotation="-50"
            android:src="@drawable/ic_fish1"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.182"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0"
            app:tint="@color/secondary" />

        <ImageView
            android:layout_width="161dp"
            android:layout_height="128dp"
            android:layout_alignParentStart="true"
            android:alpha="0.3"
            android:contentDescription="@null"
            android:src="@drawable/ic_fish2"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.247"
            app:tint="@color/secondary" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="122dp"
            android:layout_height="150dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:alpha="0.3"
            android:contentDescription="@null"
            android:rotation="100"
            android:src="@drawable/ic_fish2"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.585"
            app:tint="@color/secondary" />

        <ImageView
            android:layout_width="115dp"
            android:layout_height="145dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:alpha="0.3"
            android:contentDescription="@null"
            android:rotation="180"
            android:src="@drawable/ic_fish1"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.697"
            app:tint="@color/secondary" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>